--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
 <h1>Hello World</h1>
+
+<p>Hi! I am learning how to make
+my very own web page! I really like
+blueberry muffins and long walks on
+the beach.</p>
