--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 p {
     text-align: center;
 }
+
 </style>
 
 
-<h1>Hello World</h1>
+<h1>Devin Joseph Durham</h1>
 
-<p>Hi! I am learning how to make
-my very own web page! I really like
-blueberry muffins and long walks on
-the beach.</p>
+<p>B.S. Computer Science System from the University of Washington</p>
