--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <style>
 
-p {
+Heading {
     text-align: center;
 }
 
 </style>
 
-
+<Heading>
 <h1>Devin Joseph Durham</h1>
 
-<p>B.S. Computer Science System from the University of Washington</p>
+<p>B.S. in Computer Science System from the University of Washington</p>
+</Heading>
