--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<style>
+<!DOCTYPE html>
 
+<style>
 Heading {
     text-align: center;
+    background: black;
+    color: white;
 }
 
 </style>
+
 
 <Heading>
 <h1>Devin Joseph Durham</h1>
 
 <p>B.S. in Computer Science System from the University of Washington</p>
+
 </Heading>
