--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-
+<head>
 <style>
-Heading {
+body {
     text-align: center;
     background: black;
     color: white;
+    
 }
-
 </style>
+</head>
+<body>
 
+<h1>Devin Durham</h1>
 
-<Heading>
-<h1>Devin Joseph Durham</h1>
+<p>Hi! I am learning how to make
+my very own web page! I really like
+blueberry muffins and long walks on
+the beach.</p>
 
-<p>B.S. in Computer Science System from the University of Washington</p>
-
-</Heading>
+<input type="email" placeholder="Email">
+<input type = "submit"> 
+</body>
