--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <style>
 body {
-    text-align: center;
     background: url("https://cx4mbw-bn1306.files.1drv.com/y3mQwYGplXJhaRiIodrLS82qhM9tJONOV62UEj9ItabttPZkQLGjqQD5ZFF7HD6lU_2v-mXi8otoSsvmsF4EFHmei-W4q_VNUBWtexsFUm-j6d61ztfvsmH3kw50PdiizyLJ925_LEdHm_yLbe7rlllXA?width=1278&height=720&cropmode=none");
     color: white;
     font-family: Helvetica;
@@ -14,7 +13,7 @@ body {
 }
 
 p{
-    font-size: 24px;
+    font-size: 12px;
 }
 
 input{
@@ -35,10 +34,8 @@ input[type="submit"] {
 <h1>Devin Durham</h1>
 
 <p>
-Hi! I am learning how to make
-my very own web page! I really like
-blueberry muffins and long walks on
-the beach.</p>
+B.S. in Computer Science Systems from the University of Washington
+</p>
 
 <input type="email" placeholder="Email">
 <input type = "submit"> 
