--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+    <title> Devin Durham </title>
 <style>
 body {
     background: url("https://cx4mbw-bn1306.files.1drv.com/y3mQwYGplXJhaRiIodrLS82qhM9tJONOV62UEj9ItabttPZkQLGjqQD5ZFF7HD6lU_2v-mXi8otoSsvmsF4EFHmei-W4q_VNUBWtexsFUm-j6d61ztfvsmH3kw50PdiizyLJ925_LEdHm_yLbe7rlllXA?width=1278&height=720&cropmode=none");
@@ -15,6 +16,13 @@ body {
 
 </style>
 </head>
+
+	  <ul>
+  		<li>sign up</li>
+  		<li>search bikes</li>
+  		<li>reserve a bike</li>
+  		<li>about us</li>
+		</ul>
 
 <body>
 <img src="https://avatars2.githubusercontent.com/u/19312864?v=3&s=460" height="250" width="250">
