--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@ body {
 </style>
 </head>
 
-	  <ul>
-  		<li>sign up</li>
-  		<li>search bikes</li>
-  		<li>reserve a bike</li>
-  		<li>about us</li>
-		</ul>
+<ul>
+	<li>Home</li>
+	<li>About</li>
+	<li>Resume</li>
+ 	<li>Blog</li>
+	<li>Projects</li>
+	<li>Pictures</li>
+	<li>Contact</li>
+</ul>
 
 <body>
 <img src="https://avatars2.githubusercontent.com/u/19312864?v=3&s=460" height="250" width="250">
