--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body {
 <h1>Devin Durham</h1>
 
 <h3>
-B.S. in Computer Science Systems from the University of Washington
+Computer Scientist
 </h3>
 
 </body>
