--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html>
-
+<html>
 <head>
-    <title> Devin Durham </title>
-<style>
-body {
-    background: url("https://cx4mbw-bn1306.files.1drv.com/y3mQwYGplXJhaRiIodrLS82qhM9tJONOV62UEj9ItabttPZkQLGjqQD5ZFF7HD6lU_2v-mXi8otoSsvmsF4EFHmei-W4q_VNUBWtexsFUm-j6d61ztfvsmH3kw50PdiizyLJ925_LEdHm_yLbe7rlllXA?width=1278&height=720&cropmode=none");
-    color: white;
-    font-family: Helvetica;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: repeat;
-    background-attachment: fixed;
-}
-
-
-</style>
+    <title>Devin Durham</title>
+    <link rel="stylesheet" type="text/css" href="devindurham.index.css"/>
 </head>
 
+<body>
+
+	<div class="buttons">
 <ul>
 	<li>Home</li>
+  <a href="#">About.</a>
 	<li>About</li>
  	<li>Resume</li>
 	<li>Projects</li>
@@ -27,7 +19,8 @@ body {
 	<li>Contact</li>
 </ul>
 
-<body>
+</div>
+
 <img src="https://avatars2.githubusercontent.com/u/19312864?v=3&s=460" height="250" width="250">
 <h1>Devin Durham</h1>
 
@@ -36,3 +29,4 @@ Computer Scientist
 </h3>
 
 </body>
+</html>
