--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Devin Durham</title>
-    <link rel="stylesheet" type="text/css" href="devindurham.index.css"/>
+    <link rel="stylesheet" type="text/css" href="1devindurham.index.css"/>
 </head>
 
 <body>
