--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Devin Durham</title>
-    <link rel="stylesheet" type="text/css" href="1devindurham.index.css"/>
+    <link rel="stylesheet" type="text/css" href="devindurham.index.css"/>
 </head>
 
 <body>
@@ -10,7 +10,7 @@
 	<div class="buttons">
 <ul>
 	<li>Home</li>
-  <a href="#">About.</a>
+  <a href="devindurham.about.css">About</a>
 	<li>About</li>
  	<li>Resume</li>
 	<li>Projects</li>
