--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="buttons">
 <ul>
 	<li>Home</li>
-  <a href="devindurham.about.css">About</a>
+  <a href="devindurham.about.html">About</a>
 	<li>About</li>
  	<li>Resume</li>
 	<li>Projects</li>
