--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<li>Projects</li>
 	<li>Blog</li>
 	<li>Pictures</li>
-	<a href="Contact">Contact</a>
+	<a href="contact">Contact</a>
 	<li>Contact</li>
 </ul>
 
