--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="buttons">
 <ul>
 	<li>Home</li>
-  	<a href="about">About</a>
+  	<a href="about.html">About</a>
 	<li>About</li>
  	<li>Resume</li>
 	<li>Projects</li>
