--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<div class="buttons">
 <ul>
 	<li>Home</li>
-  	<a href="about.html">About</a>
+  	<a href="about">About</a>
 	<li>About</li>
  	<li>Resume</li>
 	<li>Projects</li>
 	<li>Blog</li>
 	<li>Pictures</li>
-	<a href="contact.html">Contact</a>
+	<a href="contact">Contact</a>
 	<li>Contact</li>
 </ul>
 
