--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,8 @@
 <div class="buttons">
 </div>
 
-<p1>Email: DevinDurham95@gmail.com</p1>
+<a href="mailto:DevinDurham95@gmail.com">Email: DevinDurham95@gmail.com </a>
+
 
 </body>
 </html>
