--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,9 @@
 <div class="buttons">
 </div>
 
+<address>
+   <a href="mailto:DevinDurham95@gmail.com"> Email: DevinDurham95@gmail.com </a>
+</address>
 
 
 
