--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
 
 <address>
     <ul>
-   <a href="mailto:DevinDurham95@live.com"> Personal Email: DevinDurham95@live.com </a>
+   <li> <a href="mailto:DevinDurham95@live.com"> Personal Email: DevinDurham95@live.com </a> </li>
    <a href="mailto:DevinDurham95@gmail.com"> Work / Job related Email: DevinDurham95@gmail.com </a>
-   <a href="https://twitter.com/DevlonTecron"> Twitter: DevlonTecron</a>
+   <li><a href="https://twitter.com/DevlonTecron"> Twitter: DevlonTecron</a></li>
    <a href="https://www.facebook.com/devlontecron"> Facebook: Devin Durham</a>
    <a href="https://github.com/devlontecron"> Github: DevlonTecron</a> 
  </ul>  
