--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,12 @@
 
 <address>
     <ul>
-   <li> <a href="mailto:DevinDurham95@live.com"> Personal Email: DevinDurham95@live.com </a> </li>
-   <a href="mailto:DevinDurham95@gmail.com"> Work / Job related Email: DevinDurham95@gmail.com </a>
-   <li><a href="https://twitter.com/DevlonTecron"> Twitter: DevlonTecron</a></li>
-   <a href="https://www.facebook.com/devlontecron"> Facebook: Devin Durham</a>
-   <a href="https://github.com/devlontecron"> Github: DevlonTecron</a> 
- </ul>  
+        <li> <a href="mailto:DevinDurham95@live.com"> Personal Email: DevinDurham95@live.com </a> </li>
+        <li><a href="mailto:DevinDurham95@gmail.com"> Work / Job related Email: DevinDurham95@gmail.com </a></li>
+        <li><a href="https://twitter.com/DevlonTecron"> Twitter: DevlonTecron</a></li>
+        <li><a href="https://www.facebook.com/devlontecron"> Facebook: Devin Durham</a></li>
+        <li><a href="https://github.com/devlontecron"> Github: DevlonTecron</a> </li>
+    </ul>  
    
 </address>
 
