--- a/contact.html
+++ b/contact.html
@@ -10,20 +10,7 @@
 <h1>Contact</h1>
 
 
-<address>
-    <ul>
-        <li> <a href="mailto:DevinDurham95@live.com"> Personal Email: DevinDurham95@live.com </a> </li>
-        <li><a href="mailto:DevinDurham95@gmail.com"> Work / Job related Email: DevinDurham95@gmail.com </a></li>
-        <li><a href="https://www.linkedin.com/in/devlontecron"> LinkedIn: DevlonTecron </a></li>
-        <li><a href="https://twitter.com/DevlonTecron"> Twitter: DevlonTecron</a></li>
-        <li><a href="https://www.facebook.com/devlontecron"> Facebook: Devin Durham</a></li>
-        <li><a href="https://github.com/devlontecron"> Github: DevlonTecron</a> </li>
-        <li>Skype: DevlonTecron</li>
-        <li><a href="https://www.instagram.com/devlontecron/"> Instagram: DevlonTecron</a> </li>
-        
-    </ul>  
-   
-</address>
+<Skype>
 
 <script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
 <div id="SkypeButton_Call_DevlonTecron_1">
@@ -32,10 +19,27 @@
  "name": "dropdown",
  "element": "SkypeButton_Call_DevlonTecron_1",
  "participants": ["DevlonTecron"],
- "imageSize": 32
+ "imageSize": 16
  });
  </script>
 </div>
+
+</Skype>
+
+
+<address>
+    <ul>
+        <li> <a href="mailto:DevinDurham95@live.com"> Personal Email: DevinDurham95@live.com </a> </li>
+        <li><a href="mailto:DevinDurham95@gmail.com"> Work / Job related Email: DevinDurham95@gmail.com </a></li>
+        <li><a href="https://www.linkedin.com/in/devlontecron"> LinkedIn: DevlonTecron </a></li>
+        <li><a href="https://twitter.com/DevlonTecron"> Twitter: DevlonTecron</a></li>
+        <li><a href="https://www.facebook.com/devlontecron"> Facebook: Devin Durham</a></li>
+        <li><a href="https://github.com/devlontecron"> Github: DevlonTecron</a> </li>
+        <li><a href="https://www.instagram.com/devlontecron/"> Instagram: DevlonTecron</a> </li>
+        
+    </ul>  
+   
+</address>
 
 
 
