--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,12 @@
 <h1>Contact</h1>
 
 
+<a href="https://m.me/XYZ">
+    Message us on Facebook
+ </a>
+
+
+
 <Skype>
 
 <script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
