--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 
 	<div class="buttons">
 <ul>
-	<li>Home</li>
-  	<a href="about">About</a>
-	<li>About</li>
- 	<li>Resume</li>
-	<li>Projects</li>
-	<li>Blog</li>
-	<li>Pictures</li>
-	<a href="contact">Contact</a>
-	<li>Contact</li>
+	<li><a href="index">Home</a></li>
+  	<li><a href="about">About</a></li>
+ 	<li><a href="resume">Resume</a></li>
+	<li><a href="projects">Contact</a></li>
+	<li><a href="posts">Posts</a></li>
+	<li><a href="media">Media</a></li>
+	<li><a href="contact">Contact</a></li>
+
 </ul>
 
 </div>
