--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 
 <body>
+	<h2>This site is currently under construction</h2>
+	<h4>Feel free to look around but some things may be missing or not working</h4>
+
 
 	<div class="buttons">
 <ul>
@@ -19,7 +22,7 @@
 
 </ul>
 
-</div>
+	</div>
 
 <img src="https://avatars2.githubusercontent.com/u/19312864?v=3&s=460" height="250" width="250">
 <h1>Devin Durham</h1>
