--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<li><a href="index">Home</a></li>
   	<li><a href="about">About</a></li>
  	<li><a href="resume">Resume</a></li>
-	<li><a href="projects">Contact</a></li>
+	<li><a href="projects">Projects</a></li>
 	<li><a href="posts">Posts</a></li>
 	<li><a href="media">Media</a></li>
 	<li><a href="contact">Contact</a></li>
