--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,12 @@
 <body>
 	<h1>This site is currently under construction</h1>
 	<h4>Feel free to look around but some things may be missing or not working</h4>
+	
+	
+	<iframe src='https://onedrive.live.com/embed?cid=D9605368AC4DABD2&resid=D9605368AC4DABD2%211062323&authkey=ADRmyyTqCQs9HLQ&em=2&wdStartOn=1' width='476px' height='288px' frameborder='0'>This is an embedded 
+		<a target='_blank' href='https://office.com'>Microsoft Office</a> document, powered by 
+		<a target='_blank' href='https://office.com/webapps'>Office Online</a>.
+	</iframe>
 
 </body>
 </html>
