--- a/media.html
+++ b/media.html
@@ -8,6 +8,8 @@
 <body>
 	<h1>This site is currently under construction</h1>
 	<h4>Feel free to look around but some things may be missing or not working</h4>
+	
+	<img src="https://evqiaq-ch3301.files.1drv.com/y3mkDNICvDulS8lToN4-aevubTtJx7ZHGeI6quMGWTOrw-TDVAgwpFc9w3LWR6YAmPK_9GOYo2xxsSIcaUjRUre44_xG3cyS-G6N7i7geDZumOULi_8Y3gKSnNnPf6KxFf-praeuFkwj9HuWsSuAJUoyLUnbDwt8Sw3iSKRXjB2DD0?width=2250&height=1217&cropmode=none" width="2250" height="1217" />
 
 </body>
 </html>
