--- a/media.html
+++ b/media.html
@@ -9,7 +9,6 @@
 	<h1>This site is currently under construction</h1>
 	<h4>Feel free to look around but some things may be missing or not working</h4>
 	
-	<img src="https://1drv.ms/i/s!AtKrTaxoU2DZx7lJ6Aj3ppV3MGYEFg" width="1125" height="608" />
-
+	<img src="https://dq3xuw-ch3301.files.1drv.com/y3mPnmi5EKNnuu9v4DbA7wHvZrJUOvGrb9zjmbcnNEAyM_7PIdNucNzfHT40x6dy9Aa6yMx-CDuT0YDHJVu5moPsu_wjbH3LEfv2Ed9Ct6eAkP6uXHzjw7CWHo5qCtJYnKMzB0PL0anpXG86SQoKnDEPj67S2mP5M2A66fFptWoezo?width=1161&height=2064&cropmode=none" width="1161" height="2064" />
 </body>
 </html>
