--- a/media.html
+++ b/media.html
@@ -10,5 +10,7 @@
 	<h4>Feel free to look around but some things may be missing or not working</h4>
 	
 	<img src="https://er5zna-ch3301.files.1drv.com/y3p_6i5gjVRW8DsmYtuzbpNEVxzT_QAAiIkgoSOHU3OMlr2owAKUfTUvZvpr8eYhPaNADbG3e7F3AYjlB-NVubrpHOgjDtvkHgYrKU71FSHqpfMqK5vdTScAt93mb0kHI7-rCoaJzqegnwE7Ziz_2ZicblJQgbOuHdBr2Zvb0p67Ng/2016062595212955%20%282%29.jpg?psid=1" width="387" height="688" />
+	<img src="https://fmmvow-ch3301.files.1drv.com/y3m5bYN0prMG5buorPSeeIguzhdW_zypg-g1MExw_GsnNM3B8GmEEeDsRYCXC6fp9GV8nggkowtpJSYiOwKgyewG2Zw6YJ4UQ7nvZQTDOBWU2k6OyG7rJfVlGtGegQxqS-ZD1YOxwMirV7jdQlzgyU5A22vvBN2kVny-FIB6bqzuvM?width=660&height=371&cropmode=none" width="660" height="371" />
+	
 </body>
 </html>
