--- a/media.html
+++ b/media.html
@@ -10,11 +10,15 @@
 	<h4>Feel free to look around but some things may be missing or not working</h4>
 	
 	<img src="https://er5zna-ch3301.files.1drv.com/y3p_6i5gjVRW8DsmYtuzbpNEVxzT_QAAiIkgoSOHU3OMlr2owAKUfTUvZvpr8eYhPaNADbG3e7F3AYjlB-NVubrpHOgjDtvkHgYrKU71FSHqpfMqK5vdTScAt93mb0kHI7-rCoaJzqegnwE7Ziz_2ZicblJQgbOuHdBr2Zvb0p67Ng/2016062595212955%20%282%29.jpg?psid=1" width="194" height="344" />
+	<img src="https://s1lxoq-ch3301.files.1drv.com/y3mYdVvj59--YgoR99cGHx0HAWlcjlvAxqH5GhnvdwRXAyEtAxPlHv6F0pYr-rENEkhwX2hGWOl7IaEeBse174wTrfzl5V9ROOGarj_ZPQlUPa_Axrcgzuns3Qe4dlCnj5vh73cW3BbE6N4Uxo1-MZv_XQvqJZF-qp60X3T9vzqX1o?width=683&height=1024&cropmode=none" width="683" height="1024" />
+	<img src="https://d2mzdw-ch3301.files.1drv.com/y3mAB--gjihOawll5-Q2Zgd51J470cdCTwVkzS5Cm18gy9o_Jzjmn5_84NpcoJGOtGf8SR-wN21dcWdi8Ur4-t3eoxFk705abw2w03jNLRik_21NqnUBiO-9N_giE2tvO1B3_FITeLYivvx-J1-aoT0p4ZdHWL2LdT5a2lR5wiWqwM?width=1080&height=1080&cropmode=none" width="1080" height="1080" />
 	<img src="https://fmmvow-ch3301.files.1drv.com/y3m5bYN0prMG5buorPSeeIguzhdW_zypg-g1MExw_GsnNM3B8GmEEeDsRYCXC6fp9GV8nggkowtpJSYiOwKgyewG2Zw6YJ4UQ7nvZQTDOBWU2k6OyG7rJfVlGtGegQxqS-ZD1YOxwMirV7jdQlzgyU5A22vvBN2kVny-FIB6bqzuvM?width=660&height=371&cropmode=none" width="660" height="371" />
 	<img src="https://dqsu3a-ch3301.files.1drv.com/y3mss65PyBa4PNI7VNRBrkNsoLXbtIFwecdJDd_Ly93O-HCAmZ0TVhNLDBh07AQ8N8aqdQe7pV55vJsSuOpLdlvb-OSzn22UZXcWw1FKP48m-0fsiBsk2N5IiBMZUwX-XDQf1I0ih7vrg-TJTdhB6yNHH8dYLTFao4ttrlEox3ORe0?width=660&height=423&cropmode=none" width="660" height="423" />
 	<img src="https://a620qg-ch3301.files.1drv.com/y3mCHJuKO2tKjcyaM4iCnAg7yIsbxOt_nlndNZcpXqmp4kzIW-gZgnCmPR2OQniJcONoSu5sXqFuccTIvYBVCEPdSPliu5h9khFUH2FNefPcBVIXJkxJhnMrcPKJdcg0F8N9v2W7HKFpHSTvdcrCstP4QjkRKgc60BBb7fT_cWXxWM?width=660&height=494&cropmode=none" width="660" height="494" />
 	<img src="https://s1lj3g-ch3301.files.1drv.com/y3mvOHfzcK2n5yKVJiLhJotqmi9ZV8RWtYI0WITJ88u08YSlHuDiGryNyMiLunfeFAVqDTd0a4waqtZkWoyQuWffIJf1vyUyGgssBE3m4va2ZPA7l2IbGgll0Hvnl0eQWMrN9EPB9Z--CfuP6cLueES8p3T5JFRYWK5vft1TUXW3AE?width=795&height=597&cropmode=none" width="398" height="299" />
-	
+	<img src="https://a63j5a-ch3301.files.1drv.com/y3mFXeal3Po978Lqw64Q8LWwi8Jk_irWsSK992UhSDxgGBC6BGcA8GfmTsIONROmdlqJlMs2bw9CzoDGoS_kPFZQuwn0PSqEDlYcOK4sTi-eIiDjrLYp8VYtKsrY2Qjfk_uhi2cFuEZAvVPHOaNa8UUKUMIbbdB5cBj8Wd97aE06HY?width=3287&height=4929&cropmode=none" width="3287" height="4929" />
+	<img src="https://ex42eq.bn1301.livefilestore.com/y3mHX9YPgoUVUNrqsA0_y6opvdca3h7gFl7cpa3qqmWhJAwS-IWfjWjFM2dprIotWDnd9c3eI5oMPW20-MDQ1AOVybsJsavyTJuFgejWK_yUyL5XTnNAeb9wAZEVLEv226WII-IovwRCtN3U5XfDJNC1U-a5ij5K6qlewawD2CBOUU?width=256&height=218&cropmode=none" width="256" height="218" />
+	<img src="https://pmeupq-ch3301.files.1drv.com/y3mwssCbGu46qBUhb1WswGk-9uoE7qGr4MoTr_PKag9iFQD94hFn_ppiInbdud0fCmCX0CLZbenEk4Mv771qJyHxioXgyFRPuFFALqr-Yxpzr0JfU0vBXkj5isjznuJAXu2yU5UIrGBRM0Z391gayocHwaL8X0DhG__UjYA9AxnW3Q?width=660&height=660&cropmode=none" width="660" height="660" />
 	
 	
 </body>
