--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
 </ul>
 
 	</div>
-
+<img src="https://a60gfq-ch3301.files.1drv.com/y3mGCJoWNcRDSdWMH4pgTkLDi6aVv3Oroomo0GnMVSMvFvXexiGQbpkcFEI9LKdxcKjHffZAK-nVNHS4SA1RtRglnHWQtKwO_BMamnUb5TFfdE3Sii0h6dlvBp7546wzj5C-h2QcWMc24FVo4eb4PFKA1_CovTq3XCvXxypYidzFyY?width=3287&height=3287&cropmode=none" width="250" height="250" />
 <img src="https://avatars2.githubusercontent.com/u/19312864?v=3&s=460" height="250" width="250">
 <h1>Devin Durham</h1>
+	
+	
 
 <h3>
 Computer Scientist
