--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
 
 </ul>
 
-	</div>
+</div>
+	
 <img src="picBW (3).jpg" height="250" width="250">
 <h1>Devin Durham</h1>
 	
-	
+<div class="boxed">
+  This text is enclosed in a box.
+</div>
 
 <h3>
 Computer Scientist
