--- a/contact.html
+++ b/contact.html
@@ -16,28 +16,13 @@
         <li><a href="mailto:DevinDurham95@gmail.com"> Work / Job related Email: DevinDurham95@gmail.com </a></li>
         <li><a href="https://www.linkedin.com/in/devlontecron"> LinkedIn: DevlonTecron </a></li>
         <li><a href="https://twitter.com/DevlonTecron"> Twitter: DevlonTecron</a></li>
-        <li><a href="https://www.facebook.com/devlontecron"> Facebook: Devin Durham</a></li>
+        <li><a href="https://m.me/devin.durham.52"> Facebook Messenger: Devin Durham</a></li>
         <li><a href="https://github.com/devlontecron"> Github: DevlonTecron</a> </li>
         <li><a href="https://www.instagram.com/devlontecron/"> Instagram: DevlonTecron</a> </li>
         
     </ul>  
    
 </address>
- 
-<Skype>
-    <script type="text/javascript" src="https://secure.skypeassets.com/i/scom/js/skype-uri.js"></script>
-    <div id="SkypeButton_Call_DevlonTecron_1">
-        <script type="text/javascript">
-            Skype.ui({
-            "name": "dropdown",
-            "element": "SkypeButton_Call_DevlonTecron_1",
-            "participants": ["DevlonTecron"],
-            "imageSize": 24
-            });
-        </script>
-    </div>
-</Skype>
-
 
 
 </body>
