--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <h1>Contact</h1>
 
 
-<address>
+<div class = "address">
     <ul>
         <li> <a href="mailto:DevinDurham95@live.com"> Personal Email: DevinDurham95@live.com </a> </li>
         <li><a href="mailto:DevinDurham95@gmail.com"> Work / Job related Email: DevinDurham95@gmail.com </a></li>
@@ -22,7 +22,7 @@
         
     </ul>  
    
-</address>
+</div>
 
 
 </body>
