--- a/posts.html
+++ b/posts.html
@@ -8,6 +8,14 @@
 <body>
 	<h1>This site is currently under construction</h1>
 	<h4>Feel free to look around but some things may be missing or not working</h4>
+	
+	<a class="twitter-timeline" 
+	   data-width="400" 
+	   data-height="700" 
+	   data-theme="dark" 
+	   href="https://twitter.com/devlontecron">Tweets by devlontecron</a> 
+	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 
 </body>
 </html>
