--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </div>
 	
-<img src="picBW (3).jpg" height="250" width="250">
+<img src="media/picBW (3).jpg" height="250" width="250">
 <h1>Devin Durham</h1>
 	
 <h3>
