--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Devin Durham</title>
-    <link rel="stylesheet" type="text/css" href="devindurham.index.css"/>
+    <link rel="stylesheet" type="text/css" href="CSS/devindurham.index.css"/>
 </head>
 <div class="boxed">
 <body>
@@ -12,13 +12,13 @@
 
 	<div class="buttons">
 <ul>
-	<li><a href="index">Home</a></li>
-  	<li><a href="about">About</a></li>
- 	<li><a href="resume">Resume</a></li>
-	<li><a href="projects">Projects</a></li>
-	<li><a href="posts">Posts</a></li>
-	<li><a href="media">Media</a></li>
-	<li><a href="contact">Contact</a></li>
+	<li><a href="html/index">Home</a></li>
+  	<li><a href="html/about">About</a></li>
+ 	<li><a href="html/resume">Resume</a></li>
+	<li><a href="html/projects">Projects</a></li>
+	<li><a href="html/posts">Posts</a></li>
+	<li><a href="html/media">Media</a></li>
+	<li><a href="html/contact">Contact</a></li>
 
 </ul>
 
