--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
 Computer Scientist
 </h3>
 	<nav>
-		hello world
-		fart
+		 <ul>
+        <li><a href="#"><b>Arctic</b></a></li>
+        <li><a href="#">Alpine</a></li>
+        <li><a href="#">Antarctic</a></li>
+      </ul>
 		</nav>
 	
 </div>
