--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <div class="boxed">
 	<body>
 		
-		<img src="media/picBW (3).jpg" height=25% width=25%>
-        <h1>Devin Durham</h1>
-        <h3>Computer Scientist</h3>
+		
+        <h1> <img src="media/picBW (3).jpg" height=25% width=25%> Devin Durham <h3>Computer Scientist</h3></h1>
+        
 		
 		
         <div class="buttons">
