--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 		
 		
-        <h1> <img src="media/picBW (3).jpg" height=25% width=25%> Devin Durham <h3>Computer Scientist</h3></h1>
+        <h1>Devin Joseph Durham <img src="media/picBW (3).jpg" height=25% width=25%>  <h3>Computer Scientist</h3></h1>
         
 		
 		
