--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 	
 <div class="boxed">
 	<body>
+		<div class = "top">
+			<img src="media/picBW (3).jpg" height=25% width=25%>
+			<h1>Devin Joseph Durham </h1>
+			<h3>Computer Scientist</h3>
+		</div>
+			
+			
 		
 		
-        <h1>Devin Joseph Durham <img src="media/picBW (3).jpg" height=25% width=25%>  <h3>Computer Scientist</h3></h1>
+        
         
 		
 		
