--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div class="boxed">
 	<body>
 		<div class = "top">
-			<img src="media/picBW (3).jpg" height=25% width=25% ALIGN = "left" >
+			<img src="media/picBW (3).jpg" height=25% width=25% >
 			<h1>Devin Joseph Durham </h1>
 			<h3>Computer Scientist</h3>
 		</div>
