--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="stylesheet" type="text/css" href="CSS/devindurham.index.css"/>
 </head>
 	
+	<script src="JS/background.js"></script>
+	
+	<p><script> background() </script></p>
+	
+
+	
+	
 <div class="boxed">
 	<body>
 		<div class = "top">
