--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	
 	<script src="JS/background.js"></script>
 	
-	<p><script> background() </script></p>
+	
 	
 
 	
@@ -16,7 +16,7 @@
 	<body>
 		<div class = "top">
 			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
-			<h1>  Devin Joseph Durham </h1>
+			<h1>  Devin Joseph Durham <script> background() </script></h1>
 			<h3>  Computer Scientist</h3>
 		</div>
 			
