--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	
 	<script src="JS/background.js"></script>
 	
+	<p id="demo">A Paragraph.</p>
+	
 	
 	
 
@@ -16,7 +18,7 @@
 	<body>
 		<div class = "top">
 			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
-			<h1>  Devin Joseph Durham <script> test() </script></h1>
+			<h1>  Devin Joseph Durham</h1>
 			<h3>  Computer Scientist</h3>
 		</div>
 			
