--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<body>
 		<div class = "top">
 			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
-			<h1>  Devin Joseph Durham</h1>
+			<h1>  Qevin Joseph Durham</h1>
 			<h3>  Computer Scientist</h3>
 		</div>
 			
