--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 	
 	<script src="JS/background.js"></script>
 	
-	<p id="demo">A Paragraph.</p>
 	
 	
-	<script>"myFunction()"</script>
+	<p><script>"myFunction()"</script></p>
 	
 
 	
