--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <link rel="stylesheet" type="text/css" href="CSS/devindurham.index.css"/>
 </head>
 	
-	<script src="JS/background.js"></script>
+	<div class = "back">
 	
-	
-	
-	<p><script>"myFunction()"</script></p>
+	<script>
+function myFunction() {
+    alert("Page is loaded");
+}
+</script>
+		</div>
 	
 
 	
