--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <title>Devin Durham</title>
     <link rel="stylesheet" type="text/css" href="CSS/devindurham.index.css"/>
+	
 </head>
+<body onload = "myFunction()">	
+	
 	
 	<div class = "back">
 	
@@ -18,10 +21,10 @@ function myFunction() {
 	
 	
 <div class="boxed">
-	<body>
+	
 		<div class = "top">
 			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
-			<h1>  Qevin Joseph Durham</h1>
+			<h1>  Devin Joseph Durham</h1>
 			<h3>  Computer Scientist</h3>
 		</div>
 			
