--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	
 	<div class = "back">
 	
-	<script scr = JS/background.js>
+	<script scr = JS/background.js></script>
 		
 
-    alert(myFunction());
+    alert(<script> myFunction() </script>);
 	
 
-</script>
+
 		</div>
 	
 
