--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="CSS/devindurham.index.css"/>
 	
 </head>
-	<script scr = JS/background.js></script>
+	<script scr= "JS/background.js"></script>
 <body onload = "myFunction()">	
 	
 		
