--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" type="text/css" href="CSS/devindurham.index.css"/>
 	
 </head>
-	<script scr= "JS/background.js"></script>
-<body onload = "myFunction()">	
+	<script scr= "JS/test.js"></script>
+<body>	
 	
 		
 <div class="boxed">
