--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="CSS/devindurham.index.css"/>
 	
 </head>
-	<script src="JS/test.js" type="text/javascript"></script>
+	<script src="JS/background.js" type="text/javascript"></script>
 <body>	
 	
 		
