--- a/html/media.html
+++ b/html/media.html
@@ -9,6 +9,8 @@
 	<h1>This site is currently under construction</h1>
 	<h4>Feel free to look around but some things may be missing or not working</h4>
 	
+	<div class="pics">
+	
 	
 	<img src="https://s1lxoq-ch3301.files.1drv.com/y3mYdVvj59--YgoR99cGHx0HAWlcjlvAxqH5GhnvdwRXAyEtAxPlHv6F0pYr-rENEkhwX2hGWOl7IaEeBse174wTrfzl5V9ROOGarj_ZPQlUPa_Axrcgzuns3Qe4dlCnj5vh73cW3BbE6N4Uxo1-MZv_XQvqJZF-qp60X3T9vzqX1o?width=683&height=1024&cropmode=none" width="512" height="768" />
 	<img src="https://d2mzdw-ch3301.files.1drv.com/y3mAB--gjihOawll5-Q2Zgd51J470cdCTwVkzS5Cm18gy9o_Jzjmn5_84NpcoJGOtGf8SR-wN21dcWdi8Ur4-t3eoxFk705abw2w03jNLRik_21NqnUBiO-9N_giE2tvO1B3_FITeLYivvx-J1-aoT0p4ZdHWL2LdT5a2lR5wiWqwM?width=1080&height=1080&cropmode=none" width="1080" height="1080" />
@@ -19,6 +21,7 @@
 	<img src="https://ex42eq.bn1301.livefilestore.com/y3mHX9YPgoUVUNrqsA0_y6opvdca3h7gFl7cpa3qqmWhJAwS-IWfjWjFM2dprIotWDnd9c3eI5oMPW20-MDQ1AOVybsJsavyTJuFgejWK_yUyL5XTnNAeb9wAZEVLEv226WII-IovwRCtN3U5XfDJNC1U-a5ij5K6qlewawD2CBOUU?width=256&height=218&cropmode=none" width="256" height="218" />
 	<img src="https://pmeupq-ch3301.files.1drv.com/y3mwssCbGu46qBUhb1WswGk-9uoE7qGr4MoTr_PKag9iFQD94hFn_ppiInbdud0fCmCX0CLZbenEk4Mv771qJyHxioXgyFRPuFFALqr-Yxpzr0JfU0vBXkj5isjznuJAXu2yU5UIrGBRM0Z391gayocHwaL8X0DhG__UjYA9AxnW3Q?width=660&height=660&cropmode=none" width="660" height="660" />
 	
+	</div>
 	
 </body>
 </html>
