--- a/html/media.html
+++ b/html/media.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Devin Durham</title>
-    <link rel="stylesheet" type="text/css" href="devindurham.media.css"/>
+    <link rel="stylesheet" type="text/css" href="CSS/devindurham.media.css"/>
 </head>
 
 <body>
