--- a/html/media.html
+++ b/html/media.html
@@ -6,6 +6,23 @@
 </head>
 
 <body>
+	<div class = "nav">
+		<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
+			<h1>  Devin Joseph Durham</h1>
+		
+		
+		<a href="index">Home</a>
+            	<a href="html/about">About</a>
+            	<a href="html/resume">Resume</a>
+            	<a href="html/projects">Projects</a>
+            	<a href="html/posts">Posts</a>
+            	<a href="html/media">Media</a>
+            	<a href="html/contact">Contact</a>
+	
+		
+	</div>
+	
+	
 	<div class="pics">
 	
 	
