--- a/html/media.html
+++ b/html/media.html
@@ -11,13 +11,13 @@
 			<h1>  Devin Joseph Durham</h1>
 		
 		
-		<a href="index">Home</a>
-            	<a href="html/about">About</a>
-            	<a href="html/resume">Resume</a>
-            	<a href="html/projects">Projects</a>
-            	<a href="html/posts">Posts</a>
-            	<a href="html/media">Media</a>
-            	<a href="html/contact">Contact</a>
+		<a href="../index">Home</a>
+            	<a href="../html/about">About</a>
+            	<a href="../html/resume">Resume</a>
+            	<a href="../html/projects">Projects</a>
+            	<a href="../html/posts">Posts</a>
+            	<a href="../html/media">Media</a>
+            	<a href="../html/contact">Contact</a>
 	
 		
 	</div>
