--- a/html/media.html
+++ b/html/media.html
@@ -7,7 +7,7 @@
 
 <body>
 	<div class = "nav">
-		<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
+		<img src="../media/picBW (3).jpg" height=25% width=25% align = "left">
 			<h1>  Devin Joseph Durham</h1>
 		
 		
