--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		
         <div class="buttons">
             <ul>
-                <li><a href="index">Home</a></li>
+                <li><a class="activate" href="index">Home</a></li>
             	<li><a href="html/about">About</a></li>
             	<li><a href="html/resume">Resume</a></li>
             	<li><a href="html/projects">Projects</a></li>
