--- a/html/resume.html
+++ b/html/resume.html
@@ -9,7 +9,7 @@
 	<h1>This site is currently under construction</h1>
 	<h4>Feel free to look around but some things may be missing or not working</h4>
 	
-	<embed src="media/DevinDurham.pdf" width="800px" height="1025px" />
+	<embed src="../media/DevinDurham.pdf" width="800px" height="1025px" />
 
 </body>
 </html>
