--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Devin Durham</title>
     <link rel="stylesheet" type="text/css" href="CSS/devindurham.index.css"/>
+	<link rel="import" href="test.html">
 	
 </head>
 <body>	
