--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Devin Durham</title>
     <link rel="stylesheet" type="text/css" href="CSS/devindurham.index.css"/>
-	<link rel="import" href="test.html">
+	<script type="text/javascript" src="test.js"></script>
 	
 </head>
 <body>	
@@ -15,6 +15,7 @@
 			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
 			<h1>  Aevin Joseph Durham</h1>
 			<h3>  Computer Scientist</h3>
+			<div id="header"></div>
 		</div>
 			
 			
