--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 		<div class = "top">
 			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
-			<h1>  Aevin Joseph Durham</h1>
+			<h1>  Bevin Joseph Durham</h1>
 			<h3>  Computer Scientist</h3>
 			<div id="header"></div>
 		</div>
