--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 	
 		<div class = "top">
 			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
-			<h1>  Bevin Joseph Durham</h1>
+			<h1>  cevin Joseph Durham</h1>
 			<h3>  Computer Scientist</h3>
-			<div id="header"></div>
+			
 		</div>
 			
 			
 		
-		
+	<div class="header"></div>	
         
         
 		
