--- a/navBar.html
+++ b/navBar.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="navBar.css"/>
+		</head>
 <body>	
 	
 		
         <div class="buttons">
             <ul>
-                <li><a class="active" href="index">Home</a></li>
+                <li><a href="index">Home</a></li>
             	<li><a href="html/about">About</a></li>
             	<li><a href="html/resume">Resume</a></li>
             	<li><a href="html/projects">Projects</a></li>
