--- a/html/about.html
+++ b/html/about.html
@@ -3,6 +3,7 @@
 <head>
     <title>Devin Durham About</title>
     <link rel="stylesheet" type="text/css" href="devindurham.about.css"/>
+    <link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
 </head>
 
 <body>
