--- a/html/media.html
+++ b/html/media.html
@@ -3,6 +3,7 @@
 <head>
     <title>Devin Durham</title>
     <link rel="stylesheet" type="text/css" href="../CSS/devindurham.media.css"/>
+	<link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
 </head>
 
 <body>
