--- a/html/media.html
+++ b/html/media.html
@@ -7,21 +7,28 @@
 </head>
 
 <body>
-	<div class = "nav">
-		<img src="../media/picBW (3).jpg" height=7% width=7% align = "left">
+	<div class="boxed">
+		
+		<div class = "top">
+			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
 			<h1>  Devin Joseph Durham</h1>
-		
-		
-		<a href="../index">Home</a>
-            	<a href="../html/about">About</a>
-            	<a href="../html/resume">Resume</a>
-            	<a href="../html/projects">Projects</a>
-            	<a href="../html/posts">Posts</a>
-            	<a href="../html/media">Media</a>
-            	<a href="../html/contact">Contact</a>
-	
-		
-	</div>
+			<h3>  Computer Scientist</h3>	
+		</div>
+			
+			
+        <div class="buttons">
+            <ul>
+                <li><a class="active" href="index">Home</a></li>
+            	<li><a href="html/about">About</a></li>
+            	<li><a href="html/resume">Resume</a></li>
+            	<li><a href="html/projects">Projects</a></li>
+            	<li><a href="html/posts">Posts</a></li>
+            	<li><a href="html/media">Media</a></li>
+            	<li><a href="html/contact">Contact</a></li>
+            </ul>
+        </div>
+	      
+ 	</div>      
 	
 	
 	<div class="pics">
