--- a/html/media.html
+++ b/html/media.html
@@ -10,7 +10,7 @@
 	<div class="boxed">
 		
 		<div class = "top">
-			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
+			<img src="../media/picBW (3).jpg" height=25% width=25% align = "left">
 			<h1>  Devin Joseph Durham</h1>
 			<h3>  Computer Scientist</h3>	
 		</div>
