--- a/html/media.html
+++ b/html/media.html
@@ -18,12 +18,12 @@
 			
         <div class="buttons">
             <ul>
-                <li><a class="active" href="index">Home</a></li>
+                <li><a  href="index">Home</a></li>
             	<li><a href="html/about">About</a></li>
             	<li><a href="html/resume">Resume</a></li>
             	<li><a href="html/projects">Projects</a></li>
             	<li><a href="html/posts">Posts</a></li>
-            	<li><a href="html/media">Media</a></li>
+            	<li><a class="active" href="html/media">Media</a></li>
             	<li><a href="html/contact">Contact</a></li>
             </ul>
         </div>
