--- a/html/media.html
+++ b/html/media.html
@@ -18,7 +18,7 @@
 			
         <div class="buttons">
             <ul>
-                <li><a href="html/index">Home</a></li>
+                <li><a href="../index">Home</a></li>
             	<li><a href="html/about">About</a></li>
             	<li><a href="html/resume">Resume</a></li>
             	<li><a href="html/projects">Projects</a></li>
