--- a/html/contact.html
+++ b/html/contact.html
@@ -6,6 +6,28 @@
 </head>
 
 <body>
+    <div class="boxed">
+		
+		<div class = "top">
+			<img src="../media/picBW (3).jpg" height=25% width=25% align = "left">
+			<h1>  Devin Joseph Durham</h1>
+			<h3>  Computer Scientist</h3>	
+		</div>
+			
+			
+        <div class="buttons">
+            <ul>
+                <li><a href="../index">Home</a></li>
+            	<li><a href="about">About</a></li>
+            	<li><a href="resume">Resume</a></li>
+            	<li><a href="projects">Projects</a></li>
+            	<li><a href="posts">Posts</a></li>
+            	<li><a class="active" href="media">Media</a></li>
+            	<li><a href="contact">Contact</a></li>
+            </ul>
+        </div>
+	      
+ 	</div>      
 
 <h1>Contact</h1>
 
