--- a/html/about.html
+++ b/html/about.html
@@ -20,11 +20,11 @@
         <div class="buttons">
             <ul>
                 <li><a href="../index">Home</a></li>
-            	<li><a href="about">About</a></li>
+            	<li><a class="active" href="about">About</a></li>
             	<li><a href="resume">Resume</a></li>
             	<li><a href="projects">Projects</a></li>
             	<li><a href="posts">Posts</a></li>
-            	<li><a class="active" href="media">Media</a></li>
+            	<li><a href="media">Media</a></li>
             	<li><a href="contact">Contact</a></li>
             </ul>
         </div>
