--- a/html/contact.html
+++ b/html/contact.html
@@ -3,6 +3,7 @@
 <head>
     <title>Devin Durham Contact</title>
     <link rel="stylesheet" type="text/css" href="devindurham.contact.css"/>
+	<link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
 </head>
 
 <body>
@@ -22,8 +23,8 @@
             	<li><a href="resume">Resume</a></li>
             	<li><a href="projects">Projects</a></li>
             	<li><a href="posts">Posts</a></li>
-            	<li><a class="active" href="media">Media</a></li>
-            	<li><a href="contact">Contact</a></li>
+            	<li><a href="media">Media</a></li>
+            	<li><a class="active" href="contact">Contact</a></li>
             </ul>
         </div>
 	      
