--- a/html/posts.html
+++ b/html/posts.html
@@ -3,6 +3,7 @@
 <head>
     <title>Devin Durham</title>
     <link rel="stylesheet" type="text/css" href="devindurham.projects.css"/>
+	<link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
 </head>
 
 <body>
@@ -21,8 +22,8 @@
             	<li><a href="about">About</a></li>
             	<li><a href="resume">Resume</a></li>
             	<li><a href="projects">Projects</a></li>
-            	<li><a href="posts">Posts</a></li>
-            	<li><a class="active" href="media">Media</a></li>
+            	<li><a class="active" href="posts">Posts</a></li>
+            	<li><a href="media">Media</a></li>
             	<li><a href="contact">Contact</a></li>
             </ul>
         </div>
