--- a/index.html
+++ b/index.html
@@ -13,19 +13,13 @@
 <div class="boxed">
 	
 		<div class = "top">
-			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
+			<img src="media/picBW (3).jpg" align = "left">
 			<h1>  Devin Joseph Durham</h1>
 			<h3>  Computer Scientist</h3>
 			
 		</div>
 			
 			
-		
-		
-        
-        
-		
-		
         <div class="buttons">
             <ul>
                 <li><a class="active" href="index">Home</a></li>
