--- a/html/about.html
+++ b/html/about.html
@@ -11,7 +11,7 @@
     <div class="boxed">
 		
 		<div class = "top">
-			<img src="../media/picBW (3).jpg" height=25% width=25% align = "left">
+			<img src="../media/picBW (3).jpg" align = "left">
 			<h1>  Devin Joseph Durham</h1>
 			<h3>  Computer Scientist</h3>	
 		</div>
