--- a/html/resume.html
+++ b/html/resume.html
@@ -28,11 +28,10 @@
             </ul>
         </div>
 	      
- 	</div>      
-	<h1>This site is currently under construction</h1>
-	<h4>Feel free to look around but some things may be missing or not working</h4>
+ 	</div> 
+<div class = "pdf">
 	
 	<embed src="../media/DevinDurham.pdf" width="800px" height="1025px" />
-
+</div>
 </body>
 </html>
