--- a/html/resume.html
+++ b/html/resume.html
@@ -3,6 +3,8 @@
 <head>
     <title>Devin Durham</title>
     <link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
+	<link rel="stylesheet" type="text/css" href="../CSS/devindurham.resume.css.css"/>
+	
 </head>
 
 <body>
