--- a/html/resume.html
+++ b/html/resume.html
@@ -32,7 +32,7 @@
  	</div> 
 <div class = "pdf">
 	
-	<embed src="../media/DevinDurham.pdf" width="800px" height="1025px" />
+	<embed src="../media/DevinDurham.pdf" width="800px" height="1025px" padding:50% />
 </div>
 </body>
 </html>
