--- a/html/resume.html
+++ b/html/resume.html
@@ -31,8 +31,9 @@
 	      
  	</div> 
 <div class = "pdf">
+	<p>help</p>
 	
-	<embed src="../media/DevinDurham.pdf" width="800px" height="1025px" padding:50% />
+	<embed src="../media/DevinDurham.pdf" width="800px" height="1025px" />
 </div>
 </body>
 </html>
