--- a/html/resume.html
+++ b/html/resume.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Devin Durham</title>
-    <link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
-	<link rel="stylesheet" type="text/css" href="../CSS/devindurham.resume.css.css"/>
+
+	<link rel="stylesheet" type="text/css" href="../CSS/devindurham.resume.css"/>
 	
 </head>
 
