--- a/html/resume.html
+++ b/html/resume.html
@@ -30,7 +30,7 @@
 	      
  	</div> 
 <div class = "pdf">	
-	<embed src="../media/DevinDurham.pdf" />
+	<embed src="../media/DevinDurham.pdf" width: 67% height: 67% />
 </div>
 </body>
 </html>
