--- a/html/resume.html
+++ b/html/resume.html
@@ -30,7 +30,7 @@
 	      
  	</div> 
 <div class = "pdf">	
-	<embed src="../media/DevinDurham.pdf" width="500px" height= "700px" />
+	<embed src="../media/DevinDurham.pdf" width="50%" />
 </div>
 </body>
 </html>
