--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <link rel="stylesheet" type="text/css" href="CSS/devindurham.index.css"/>
 
 	
+
+	
 	
 </head>
 <body>	
 	
-		
+	<p><script src = "JS/background.js"></script></p>
 <div class="boxed">
 	
 		<div class = "top">
