--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <link rel="stylesheet" type="text/css" href="CSS/devindurham.index.css"/>
 
 	
-
+<script src = "JS/background.js"></script>
 	
 	
 </head>
 <body>	
 	
-	<p><script src = "JS/background.js"></script></p>
 <div class="boxed">
 	
 		<div class = "top">
