--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 	
 </head>
 <body>	
-	<p id="header"></p>
-	<p id="test"></p>
+	
+
+	background-image: url("<div id="header"></div>");
 	
 <div class="boxed">
 	
