--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 	
 </head>
 <body>	
-	background-image: url("media/picBW (3).jpg");
+
+	<div style="background-image:url(http://www.html.am/images/image-codes/milford_sound_t.jpg);">
+This text appears in front of the background image.
+</div>
+
 	
 	
 	
