--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 <body>	
 
-	<div style="background-image:url(http://www.html.am/images/image-codes/milford_sound_t.jpg);">
-This text appears in front of the background image.
+	<div style="background-image:url(media/picBW (3).jpg);">
 </div>
 
 	
