--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 	
 	
 </head>
-<body>	
+<body background="bgimage.jpg">	
 
-	<div style="background-image:url(http://www.html.am/images/image-codes/milford_sound_t.jpg);width:220px;height:140px;color:black;font-size:18px;">
-This text appears in front of the background image.
-</div>
+	
 
 
 	
