--- a/index.html
+++ b/index.html
@@ -5,17 +5,12 @@
     <link rel="stylesheet" type="text/css" href="CSS/devindurham.index.css"/>
 
 	
-<script src = "JS/background.js"></script>
+<!--<script src = "JS/background.js"></script>    <div id="header"></div>   -->
 	
 	
 </head>
-<body background= "(<div id="header"></div>)">	
+<body>	
 
-	
-
-
-	
-	
 	
 <div class="boxed">
 	
