--- a/html/contact.html
+++ b/html/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Devin Durham Contact</title>
-    <link rel="stylesheet" type="text/css" href="devindurham.contact.css"/>
+    <link rel="stylesheet" type="text/css" href="../CSS/devindurham.contact.css"/>
 	<link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
 </head>
 
