--- a/html/contact.html
+++ b/html/contact.html
@@ -30,6 +30,7 @@
 	      
  	</div>      
 
+<div class = contactBox>
 <h1>Contact</h1>
 
 
@@ -44,7 +45,7 @@
         <li><a href="https://www.instagram.com/devlontecron/"> Instagram: DevlonTecron</a> </li>
         
     </ul>  
-   
+   </div>
 </div>
 
 
