--- a/html/about.html
+++ b/html/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Devin Durham About</title>
-    <link rel="stylesheet" type="text/css" href="devindurham.about.css"/>
+    <link rel="stylesheet" type="text/css" href="../CSS/devindurham.about.css"/>
     <link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
 </head>
 
