--- a/html/about.html
+++ b/html/about.html
@@ -45,7 +45,7 @@
     <br><br>
     So with that, I am now currently a student at the University of Washington living in Tacoma WA, earning a Bachelor’s of Science in Computer Software Systems. Scheduled to graduate spring of 2017 and currently looking for internships and or jobs. Please see my resume for further information.
     <br><br>
-    This page is simply my life story and is for people to get a feel for who I am and where I came from. I’ll defiantly be adding to this and re-structuring this page (perhaps with chapters and or sections). My end thought or goal is to almost have an auto biography laid out and put on display here. Feel free to email me with further questions or add in comments (coming soon!)
+    This page is simply my life story and is for people to get a feel for who I am and where I came from. I’ll defiantly be adding to this and re-structuring this page (perhaps with chapters and or sections). 
     </p>
 </div>
 
