--- a/html/resume.html
+++ b/html/resume.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Devin Durham</title>
+	<link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
 	<link rel="stylesheet" type="text/css" href="../CSS/devindurham.resume.css"/>
 	
 </head>
@@ -29,7 +30,7 @@
         </div>
 	      
  	</div> 
-<div class = "pdf">	
+<div class = "resumeBox">	
 	<embed src="../media/DevinDurham.pdf" width="850px" height = "1100px" />
 </div>
 </body>
