--- a/html/posts.html
+++ b/html/posts.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Devin Durham</title>
-    <link rel="stylesheet" type="text/css" href="devindurham.projects.css"/>
+    <link rel="stylesheet" type="text/css" href="../CSS/devindurham.projects.css"/>
 	<link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
 </head>
 
@@ -29,16 +29,15 @@
         </div>
 	      
  	</div>      
-	<h1>This site is currently under construction</h1>
-	<h4>Feel free to look around but some things may be missing or not working</h4>
-	
+
+<div class = "postsBox">	
 	<a class="twitter-timeline" 
 	   data-width="400" 
 	   data-height="700" 
 	   data-theme="dark" 
 	   href="https://twitter.com/devlontecron">Tweets by devlontecron</a> 
 	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+</div>
 
 </body>
 </html>
