--- a/html/projects.html
+++ b/html/projects.html
@@ -29,8 +29,8 @@
         </div>
 	      
  	</div>      
-	<h1>This site is currently under construction</h1>
-	<h4>Feel free to look around but some things may be missing or not working</h4>
+	<div class = "projectsBox">
+		</div>
 
 </body>
 </html>
