--- a/html/projects.html
+++ b/html/projects.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Devin Durham</title>
-    <link rel="stylesheet" type="text/css" href="devindurham.projects.css"/>
+    <link rel="stylesheet" type="text/css" href="../CSS/devindurham.projects.css"/>
 	<link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
 </head>
 
