--- a/html/media.html
+++ b/html/media.html
@@ -30,10 +30,11 @@
 	      
  	</div>      
 	
+<div class="picsBox">	
+	
+	<h3>Photos</h3>
 	
 	<div class="pics">
-	
-	
 	<img src="https://s1lxoq-ch3301.files.1drv.com/y3mYdVvj59--YgoR99cGHx0HAWlcjlvAxqH5GhnvdwRXAyEtAxPlHv6F0pYr-rENEkhwX2hGWOl7IaEeBse174wTrfzl5V9ROOGarj_ZPQlUPa_Axrcgzuns3Qe4dlCnj5vh73cW3BbE6N4Uxo1-MZv_XQvqJZF-qp60X3T9vzqX1o?width=683&height=1024&cropmode=none" width="512" height="768" />
 	<img src="https://d2mzdw-ch3301.files.1drv.com/y3mAB--gjihOawll5-Q2Zgd51J470cdCTwVkzS5Cm18gy9o_Jzjmn5_84NpcoJGOtGf8SR-wN21dcWdi8Ur4-t3eoxFk705abw2w03jNLRik_21NqnUBiO-9N_giE2tvO1B3_FITeLYivvx-J1-aoT0p4ZdHWL2LdT5a2lR5wiWqwM?width=1080&height=1080&cropmode=none" width="1080" height="1080" />
 	<img src="https://fmmvow-ch3301.files.1drv.com/y3m5bYN0prMG5buorPSeeIguzhdW_zypg-g1MExw_GsnNM3B8GmEEeDsRYCXC6fp9GV8nggkowtpJSYiOwKgyewG2Zw6YJ4UQ7nvZQTDOBWU2k6OyG7rJfVlGtGegQxqS-ZD1YOxwMirV7jdQlzgyU5A22vvBN2kVny-FIB6bqzuvM?width=660&height=371&cropmode=none" width="660" height="371" />
@@ -43,6 +44,15 @@
 	<img src="https://ex42eq.bn1301.livefilestore.com/y3mHX9YPgoUVUNrqsA0_y6opvdca3h7gFl7cpa3qqmWhJAwS-IWfjWjFM2dprIotWDnd9c3eI5oMPW20-MDQ1AOVybsJsavyTJuFgejWK_yUyL5XTnNAeb9wAZEVLEv226WII-IovwRCtN3U5XfDJNC1U-a5ij5K6qlewawD2CBOUU?width=256&height=218&cropmode=none" width="256" height="218" />
 	<img src="https://pmeupq-ch3301.files.1drv.com/y3mwssCbGu46qBUhb1WswGk-9uoE7qGr4MoTr_PKag9iFQD94hFn_ppiInbdud0fCmCX0CLZbenEk4Mv771qJyHxioXgyFRPuFFALqr-Yxpzr0JfU0vBXkj5isjznuJAXu2yU5UIrGBRM0Z391gayocHwaL8X0DhG__UjYA9AxnW3Q?width=660&height=660&cropmode=none" width="660" height="660" />
 	
+	</div>
+	</div>
+	
+<div class = "videoBox" > 
+	<h3>Video</h3>
+	</div>
+	
+<div class = "writingBox">
+	<h3>Writing</h3>
 	</div>
 	
 </body>
