--- a/html/media.html
+++ b/html/media.html
@@ -28,7 +28,8 @@
             </ul>
         </div>
 	      
- 	</div>      
+ 	</div>   
+<div class = "mediaBox">
 	
 <div class="picsBox">	
 	
@@ -53,6 +54,8 @@
 	
 <div class = "writingBox">
 	<h3>Writing</h3>
+	</div>
+	
 	</div>
 	
 </body>
