--- a/html/media.html
+++ b/html/media.html
@@ -51,6 +51,9 @@
 	
 <div class = "videoBox" > 
 	<h3>Video</h3>
+	
+	<iframe width="640" height="360" src="https://www.youtube.com/embed/BO8HfHtlEQs" frameborder="0" allowfullscreen></iframe>
+	
 	</div>
 	
 <div class = "writingBox">
