--- a/html/posts.html
+++ b/html/posts.html
@@ -31,7 +31,7 @@
  	</div>      
 
 <div class = "postsBox">	
-	<a class="twitter-timeline"> 
+	<a class="twitter-timeline" 
 	   data-width="400" 
 	   data-height="700" 
 	   data-theme="dark" 
