--- a/html/posts.html
+++ b/html/posts.html
@@ -32,7 +32,7 @@
 
 <div class = "postsBox">	
 	<a class="twitter-timeline" 
-	   data-width="600" 
+	   data-width="67%" 
 	   data-height="700" 
 	   data-theme="dark" 
 	   href="https://twitter.com/devlontecron">Tweets by devlontecron</a> 
