--- a/html/posts.html
+++ b/html/posts.html
@@ -33,7 +33,7 @@
 <div class = "postsBox">	
 	<a class="twitter-timeline" 
 	   data-width="100%" 
-	   data-height="700" 
+	   data-height="100%" 
 	   data-theme="dark" 
 	   href="https://twitter.com/devlontecron">Tweets by devlontecron</a> 
 	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
