--- a/html/projects.html
+++ b/html/projects.html
@@ -16,21 +16,39 @@
 		</div>
 			
 			
-        <div class="buttons">
-            <ul>
-                <li><a href="../index">Home</a></li>
-            	<li><a href="about">About</a></li>
-            	<li><a href="resume">Resume</a></li>
-            	<li><a class="active" href="projects">Projects</a></li>
-            	<li><a href="posts">Posts</a></li>
-            	<li><a href="media">Media</a></li>
-            	<li><a href="contact">Contact</a></li>
-            </ul>
-        </div>
-	      
- 	</div>      
-	<div class = "projectsBox">
+        	<div class="buttons">
+            		<ul>
+                		<li><a href="../index">Home</a></li>
+            			<li><a href="about">About</a></li>
+            			<li><a href="resume">Resume</a></li>
+            			<li><a class="active" href="projects">Projects</a></li>
+            			<li><a href="posts">Posts</a></li>
+            			<li><a href="media">Media</a></li>
+            			<li><a href="contact">Contact</a></li>
+            		</ul>
+        	</div>
+	 
+ 	</div>
+	
+	<div class = "projectBoxes">
+		<div class = "projectsBox3">
+			<h1>Current Project:</h1>
+			<h3>Personal Server</h3>
+			<p>This is just a quick small side project to set up my personal server. I’m doing this to hopefully later migrate the data for this website over and have everything stored there. I also need a personal and safe place to store things that’s under my control and that I manage. The hardware ill be using is my old Lenovo laptop with 4gb of ram and over about 500Gb of storage. As for the software, I will be getting more hands on time with Linux based OS and I will be installing Ubuntu Desktop for lighter, faster, and easier processing. </p>
 		</div>
+	
+		<div class = "projectsBox2">
+			<h3>Website</h3>
+			<p>Started working on the website in the latter half of the summer of 2016. I think I officially launched somewhere in mid-September with only one static page that simply said “hello world”. From there I have developed, from scratch using HTML5, JS, and CSS3, this work in progress personal website. I taught myself the language and how to launch using github and Codecademy. This has personally been my favorite project to work on. Much of the work has been me just struggling / fighting with CSS and trying to get everything just right. I will forever come back to this and update it and continue to work on it over the coming years. My end dream is for this to become a very slick, feature rich, smooth website that incorporate angular and other cutting edge languages. I hope for this to be a one stop destination for employers, researchers, friends and family to discover and explore who I am, what I’ve done, what I’m going to do, and where I’m heading.  </p>
+		</div>
+	
+		<div class = "projectsBox1">
+			<h3>Pierce County Health Department</h3>
+			<p>Worked in a small team of 4 as a technical consultant for Pierce County Health Department in which I developed a database and software support concepts by collecting data from professionals in the health industry and from other US state who have implemented a similar system. The health department was looking to incorporate a system that would allow individual health care workers to be able to work freely with civilians but also be able to bridge those individuals to hospitals and other healthcare organizations or resources. The database was to include: a log of all the healthcare workers in the county with what skills or certifications they had, healthcare organizations and what they could treat or do for specific patients along with keeping and tracking an individual’s health records, and link the system with other local organizations and their resources and events for community members to sign up for or be notified of.  This was the big idea and final dream of the department. I worked on a smaller scale in a way that we only focused on applying the system to just the city of Tacoma. I collected and research data on every key piece or data point that should be collected, how to merge other databases from other organizations, the hardware and software cost, software support, IT support, customer support, actual data structure of the database, alternative options, how to be prepared to scale properly for expansion, and a three-month deployment plan.
+			<br> <br>I had a lot of fun with this project simply because it was a reality check for me in the sense that I realized who I was in the project and how much I knew. It was a wonderful taste of the career field and government work. Healthcare is also something I’m very interested in so it was that much more engaging for me. I also had to cram a lot of information and do a lot of personal research work so I could explain it and present it properly to the health department board.  </p>
+		</div>
+	</div>
+	
 
 </body>
 </html>
