--- a/html/projects.html
+++ b/html/projects.html
@@ -30,6 +30,7 @@
 	 
  	</div>
 	
+	<div class = "projectBoxes">
 
 		<div class = "projectsBox3">
 			<h1>Current Project:</h1>
@@ -47,7 +48,7 @@
 			<p>Worked in a small team of 4 as a technical consultant for Pierce County Health Department in which I developed a database and software support concepts by collecting data from professionals in the health industry and from other US state who have implemented a similar system. The health department was looking to incorporate a system that would allow individual health care workers to be able to work freely with civilians but also be able to bridge those individuals to hospitals and other healthcare organizations or resources. The database was to include: a log of all the healthcare workers in the county with what skills or certifications they had, healthcare organizations and what they could treat or do for specific patients along with keeping and tracking an individual’s health records, and link the system with other local organizations and their resources and events for community members to sign up for or be notified of.  This was the big idea and final dream of the department. I worked on a smaller scale in a way that we only focused on applying the system to just the city of Tacoma. I collected and research data on every key piece or data point that should be collected, how to merge other databases from other organizations, the hardware and software cost, software support, IT support, customer support, actual data structure of the database, alternative options, how to be prepared to scale properly for expansion, and a three-month deployment plan.
 			<br> <br>I had a lot of fun with this project simply because it was a reality check for me in the sense that I realized who I was in the project and how much I knew. It was a wonderful taste of the career field and government work. Healthcare is also something I’m very interested in so it was that much more engaging for me. I also had to cram a lot of information and do a lot of personal research work so I could explain it and present it properly to the health department board.  </p>
 		</div>
-	
+	</div>
 	
 
 </body>
