--- a/html/projects.html
+++ b/html/projects.html
@@ -35,7 +35,7 @@
 		<div class = "projectsBox3">
 			<h1>Current Project:</h1>
 			<h3>Personal Server</h3>
-			<p>This is just a quick small side project to set up my personal server. I’m doing this to hopefully later migrate the data for this website over and have everything stored there. I also need a personal and safe place to store things that’s under my control and that I manage. The hardware ill be using is my old Lenovo laptop with 4gb of ram and over about 500Gb of storage. As for the software, I will be getting more hands on time with Linux based OS and I will be installing Ubuntu Desktop for lighter, faster, and easier processing. </p>
+			<p>This is just a quick small side project to set up my personal server. I’m doing this to hopefully later migrate the data for this website over and have everything stored there. I also need a personal and safe place to store things that’s under my control and that I manage. The hardware I'll be using is my old Lenovo laptop with 4gb of ram and over about 500Gb of storage. As for the software, I will be getting more hands on time with Linux based OS and I will be installing Ubuntu Desktop for lighter, faster, and easier processing. </p>
 		</div>
 	
 		<div class = "projectsBox2">
