--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Devin Durham</title>
     <link rel="stylesheet" type="text/css" href="CSS/devindurham.index.css"/>
+	<link rel="stylesheet" type="text/css" href="../CSS/navBar.css"/>
 
 	
 <!--<script src = "JS/background.js"></script>    <div id="header"></div>   -->
