--- a/html/resume.html
+++ b/html/resume.html
@@ -31,7 +31,7 @@
 	      
  	</div> 
 <div class = "resumeBox">	
-	<embed src="../media/DevinDurham.pdf" width="850px" height = "1100px" />
+	<embed src="../media/DevinDurham.pdf" />
 </div>
 </body>
 </html>
