--- a/html/contact.html
+++ b/html/contact.html
@@ -38,7 +38,7 @@
     <ul>
         <li> <a href="mailto:DevinDurham95@live.com"> Personal Email: DevinDurham95@live.com </a> </li>
         <li><a href="mailto:DevinDurham95@gmail.com"> Work / Job related Email: DevinDurham95@gmail.com </a></li>
-        <li><a href="https://www.linkedin.com/in/devlontecron"> LinkedIn: DevlonTecron </a></li>
+        <li><a href="https://www.linkedin.com/in/devlontecron"> LinkedIn: Devin Durham </a></li>
         <li><a href="https://twitter.com/DevlonTecron"> Twitter: DevlonTecron</a></li>
         <li><a href="https://m.me/devin.durham.52"> Facebook Messenger: Devin Durham</a></li>
         <li><a href="https://github.com/devlontecron"> Github: DevlonTecron</a> </li>
