--- a/html/contact.html
+++ b/html/contact.html
@@ -36,7 +36,7 @@
 
 <div class = "address">
     <ul>
-        <li> <a href="mailto:DevinDurham95@live.com"> Personal Email: DevinDurham95@live.com </a> </li>
+        <li> <p>Personal Email:</p> <a href="mailto:DevinDurham95@live.com"> DevinDurham95@live.com </a> </li>
         <li><a href="mailto:DevinDurham95@gmail.com"> Work / Job related Email: DevinDurham95@gmail.com </a></li>
         <li><a href="https://www.linkedin.com/in/devlontecron"> LinkedIn: Devin Durham </a></li>
         <li><a href="https://twitter.com/DevlonTecron"> Twitter: DevlonTecron</a></li>
