--- a/html/contact.html
+++ b/html/contact.html
@@ -36,13 +36,13 @@
 
 <div class = "address">
     <ul>
-        <li> Personal Email: <a href="mailto:DevinDurham95@live.com"> DevinDurham95@live.com </a> </li>
-        <li><a href="mailto:DevinDurham95@gmail.com"> Work / Job related Email: DevinDurham95@gmail.com </a></li>
-        <li><a href="https://www.linkedin.com/in/devlontecron"> LinkedIn: Devin Durham </a></li>
-        <li><a href="https://twitter.com/DevlonTecron"> Twitter: DevlonTecron</a></li>
-        <li><a href="https://m.me/devin.durham.52"> Facebook Messenger: Devin Durham</a></li>
-        <li><a href="https://github.com/devlontecron"> Github: DevlonTecron</a> </li>
-        <li><a href="https://www.instagram.com/devlontecron/"> Instagram: DevlonTecron</a> </li>
+        <li>Personal Email: <a href="mailto:DevinDurham95@live.com"> DevinDurham95@live.com </a> </li>
+        <li>Work / Job related Email: <a href="mailto:DevinDurham95@gmail.com"> DevinDurham95@gmail.com </a></li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/devlontecron"> Devin Durham </a></li>
+        <li>Twitter: <a href="https://twitter.com/DevlonTecron"> DevlonTecron</a></li>
+        <li>Facebook Messenger: <a href="https://m.me/devin.durham.52"> Devin Durham</a></li>
+        <li>Github: <a href="https://github.com/devlontecron"> DevlonTecron</a> </li>
+        <li>Instagram: <a href="https://www.instagram.com/devlontecron/"> DevlonTecron</a> </li>
         
     </ul>  
    </div>
