--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
 			<h1>  Devin Joseph Durham</h1>
 			<h3>  Computer Scientist</h3>
+			<h6> "Empower your colleagues and change the world"</h6>
 			
 		</div>
 			
