--- a/html/contact.html
+++ b/html/contact.html
@@ -33,7 +33,13 @@
 <div class = "contactBox">
 <h1>Contact</h1>
 
-
+<table>
+  <tr>
+    <td>Personal Email: </td>
+    <td><a href="mailto:DevinDurham95@live.com">DevinDurham95@live.com </a></td>
+  </tr>
+</table>
+<!--
 <div class = "address">
     <ul>
         <li>Personal Email:              <a href="mailto:DevinDurham95@live.com">          DevinDurham95@live.com </a> </li>
@@ -46,7 +52,8 @@
         
     </ul>  
    </div>
-</div>
+-->
+	</div>
 
 
 </body>
