--- a/html/contact.html
+++ b/html/contact.html
@@ -38,6 +38,19 @@
     <td>Personal Email: </td>
     <td><a href="mailto:DevinDurham95@live.com">DevinDurham95@live.com </a></td>
   </tr>
+  <tr>
+    <td>Work / Job related Email: </td>
+    <td> <a href="mailto:DevinDurham95@gmail.com"> DevinDurham95@gmail.com </a></td>
+  </tr>
+  <tr>
+    <td>LinkedIn: </td>
+    <td> <a href="https://www.linkedin.com/in/devlontecron"> Devin Durham </a></td>
+  </tr>
+  <tr>
+    <td>Twitter:  </td>
+    <td> <a href="https://twitter.com/DevlonTecron"> DevlonTecron</a></td>
+  </tr>
+	
 </table>
 <!--
 <div class = "address">
