--- a/html/contact.html
+++ b/html/contact.html
@@ -50,20 +50,27 @@
     <td>Twitter:  </td>
     <td> <a href="https://twitter.com/DevlonTecron"> DevlonTecron</a></td>
   </tr>
+  <tr>
+    <td>Facebook Messenger:</td>
+    <td>  <a href="https://m.me/devin.durham.52"> Devin Durham</a></td>
+  </tr>
+  <tr>
+    <td>Github:</td>
+    <td> <a href="https://github.com/devlontecron"> DevlonTecron</a></td>
+  </tr>
+  <tr>
+    <td>Instagram:   </td>
+    <td> <a href="https://www.instagram.com/devlontecron/"> DevlonTecron</a></td>
+  </tr>
 	
 </table>
 <!--
 <div class = "address">
-    <ul>
-        <li>Personal Email:              <a href="mailto:DevinDurham95@live.com">          DevinDurham95@live.com </a> </li>
-        <li>Work / Job related Email:    <a href="mailto:DevinDurham95@gmail.com"> DevinDurham95@gmail.com </a></li>
-        <li>LinkedIn:                    <a href="https://www.linkedin.com/in/devlontecron"> Devin Durham </a></li>
-        <li>Twitter:                     <a href="https://twitter.com/DevlonTecron"> DevlonTecron</a></li>
-        <li>Facebook Messenger:          <a href="https://m.me/devin.durham.52"> Devin Durham</a></li>
-        <li>Github:                      <a href="https://github.com/devlontecron"> DevlonTecron</a> </li>
-        <li>Instagram:                   <a href="https://www.instagram.com/devlontecron/"> DevlonTecron</a> </li>
-        
-    </ul>  
+
+        <li>Facebook Messenger:         </li>
+        <li>                       </li>
+        <li>                   </li>
+ 
    </div>
 -->
 	</div>
