--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>	
 
 	
-<div class="navBoxed">
+<div class="boxed">
 	
 		<div class = "top">
 			<img src="media/picBW (3).jpg" height=25% width=25% align = "left">
