--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 	
 	<div class = "SubBoxes">
 
-		<div class = "firstBox">
+		<div class = "Sticky">
 			<h3>Looking For Work!</h3>
 			<p>I graduate in June 2017 with a Batchelors of Science in Computer Science & Systems form the University of Washington </p>
 		</div>
 		
-		<div class = "RecentUpdate">
-			<h3>UpdateLog</h3>
+		<div class = "UpdateLog">
+			<h3>Update Log</h3>
 			<h4>New Year, New .me </h4>
 			<p></p>
 		</div>
 	
 		<div class = "SocialMediaBox">
-			<h3>Website</h3>
+			<h3>Social</h3>
 			<p></p>
 		</div>
 	
