--- a/index.html
+++ b/index.html
@@ -52,15 +52,14 @@
 	
 		<div class = "SocialMediaBox">
 			<h3>Social</h3>
-			<blockquote class="twitter-tweet" data-theme="dark" data-link-color="#F5F8FA">
-				<p lang="en" dir="ltr">Sunsets don&#39;t get much better than this one over <a href="https://twitter.com/GrandTetonNPS">@GrandTetonNPS</a>.
-					<a href="https://twitter.com/hashtag/nature?src=hash">#nature</a> 
-					<a href="https://twitter.com/hashtag/sunset?src=hash">#sunset</a> 
-					<a href="http://t.co/YuKy2rcjyU">pic.twitter.com/YuKy2rcjyU</a>
-				</p>&mdash; US Dept of Interior (@Interior) 
-				<a href="https://twitter.com/Interior/status/463440424141459456">May 5, 2014</a>
-			</blockquote>
-			<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			<div id=”twitter_update_list”>
+				<script type=”text/javascript” src=”http://twitter.com/javascripts/blogger.js”>
+				</script>
+				<script type=”text/javascript” src=”http://twitter.com/statuses/user_timeline/devlontecron.json?callback=twitterCallback2&count=1″>
+				</script>
+				
+			
+			</div>
 		</div>
 	
 		
