--- a/index.html
+++ b/index.html
@@ -52,18 +52,19 @@
 	
 		<div class = "SocialMediaBox">
 			<h3>Social</h3>
-			<div id=”twitter_update_list”>
-				<script type=”text/javascript” src=”http://twitter.com/javascripts/blogger.js”>
-				</script>
-				<script type=”text/javascript” src=”http://twitter.com/statuses/user_timeline/devlontecron.json?callback=twitterCallback2&count=1″>
-				</script>
+			<a class="twitter-timeline" 
+	   data-theme="dark" 
+	   href="https://twitter.com/devlontecron" 
+			   data-tweet-limit="3"> 
+				Tweets by devlontecron</a> 
+	<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 				
 			
 			</div>
 		</div>
 	
 		
-	</div>
+	
 	
 	
         
