--- a/index.html
+++ b/index.html
@@ -41,13 +41,17 @@
 
 		<div class = "Sticky">
 			<h3>Looking For Work!</h3>
-			<p>I graduate in June 2017 with a Batchelors of Science in Computer Science & Systems form the University of Washington </p>
+			<p>I graduate in June of 2017 with a Bachelor’s of Science in Computer Science & Systems from the University of Washington! I’m looking for entry level jobs to help build my skill set and gain experience in the work force. Please feel free to look around (especially the “Resume” tab) and or reach out to me in any of the ways listed under the “Contact” tab. 
 		</div>
 		
 		<div class = "UpdateLog">
 			<h3>Update Log</h3>
-			<h4>New Year, New .me </h4>
-			<p></p>
+			<h4>(12/20/2016) New Year, New .me </h4>
+			<ul>
+				<li>Finally got around to updating and putting content to the main home page. More to come. It still seems dull. </li>
+				<li>Changed up / updated minor UI things. Made the contact tab a table. Expanded the navigation box. Accent color is now (0,0,255)</li>
+				<li>Wasted a lot of time trying to make or figure out a simple and modern image to place inside the nav box.</li>
+			</ul>
 		</div>
 	
 		<div class = "SocialMediaBox">
